# android_opencv

./: .gitignore  LICENSE.txt  README.md
app/: CMakeLists.txt  build.gradle
app/cmake/: FindOpenCV.cmake
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/java/net/immersive/facedetection/: DetectionBasedTracker.java  FdActivity.java
app/src/main/res/layout/: activity_fd.xml
gradle/wrapper/: gradle-wrapper.properties
